--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,7 +3,7 @@
 {
 	"name": "CTCH1330",
 	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
-	"image": "ghcr.io/ou-ctch1330/ctch1330_cpp:latest",
+	"image": "ghcr.io/ou-ctch1330/ctch1330_cpp:1.1",
 	"features": {
 		"ghcr.io/devcontainers/features/github-cli:1": {}
 	},
